# touchpc

./: .gitignore
android-app/: gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/layout/: dialog_pin_entry.xml  dialog_shortcut_editor.xml  fragment_connection.xml  fragment_keyboard.xml  fragment_settings.xml  fragment_shortcuts.xml  fragment_touchpad.xml  item_server.xml  item_shortcut.xml
android-app/app/src/main/res/menu/: bottom_nav_menu.xml
android-app/app/src/main/res/navigation/: nav_graph.xml
android-app/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
docs/: DEPLOY-STATUS.md  privacy-policy.html
docs/plans/: 2026-02-21-complete-android-app-and-deploy.md
docs/playstore/: listing-en.md  listing-es.md  privacy-policy.md  release-checklist.md
pc-server/: pyproject.toml
pc-server/remotecontrol/: __main__.py  config.py  server.py
pc-server/remotecontrol/discovery/: mdns_advertiser.py
pc-server/remotecontrol/executor/: key_mapping.py  mouse_smoother.py  pynput_executor.py
pc-server/remotecontrol/gui/: qr_window.py  tray_icon.py
pc-server/remotecontrol/protocol/: commands.py  constants.py  deserializer.py
pc-server/remotecontrol/security/: pin_auth.py  rate_limiter.py
pc-server/remotecontrol/transport/: base.py  websocket_server.py
pc-server/remotecontrol/utils/: network_utils.py  platform_utils.py
(+31 files in other folders)
